# taneyomikun

./: .gitignore  .prettierignore  CLAUDE.md  DEBUG_INSTRUCTIONS.md  README.md  debug_run.sh  eslint.config.js  index.html  package-lock.json  package.json  test-audio.html  test-http.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: development-log.md  development-plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: manager.rs  mod.rs
src-tauri/src/commands/: http.rs  mod.rs  test.rs  tts.rs
src-tauri/src/http/: config.rs  handlers.rs  mod.rs  server.rs
src-tauri/src/tts/: cartesia.rs  client.rs  config.rs  error.rs  mod.rs  storage.rs
src/components/: HistoryPanel.tsx  LanguageFlag.tsx  LanguageSwitch.tsx  ProfileIcon.tsx  QueuePanel.css  QueuePanel.test.tsx  QueuePanel.tsx  SettingsModal.tsx  SpeedControl.tsx  VolumeControl.tsx
src/hooks/: useQueueStore.ts
src/stores/: historyStore.ts  languageStore.ts  queueStore.test.ts  queueStore.ts
src/styles/: design-system.css  language-switch.css  modal.css  speech-bubble.css
src/test/: setup.ts
src/types/: images.d.ts  language.ts
src/utils/: audioPlayer.ts  tauriApi.ts  tts.ts
