[package]
name = "Taneyomi-kun"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.7", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"

[lib]
name = "taneyomi_kun_lib"
crate-type = ["lib", "cdylib", "staticlib"]
